2003-06-05 Kenneth Rohde Christiansen <kenneth@gnu.org>

	* configure.in: Added li to ALL_LINGUAS.

=== gnome-icon-theme 1.0.4 ===
	
2003-06-04  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Bump to 1.0.4

2003-05-30  Marco Pesenti Gritti  <marco@it.gnome.org>

	* 36x36/Makefile.am:
	* 36x36/apps/.cvsignore:
	* 36x36/apps/Makefile.am:
	* 36x36/apps/gnome-spinner-rest.png:
	* 36x36/apps/gnome-spinner.png:
	* configure.in:

	Add icons for the gnome spinner.

=== gnome-icon-theme 1.0.3 ===
	
2003-05-19  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Bump to 1.0.3.

2003-05-16  Dave Camp  <dave@ximian.com>

	* 48x48/emblems/Makefile.am:
	* 48x48/emblems/emblem-desktop.png: Added desktop emblem from
	Jimmac.

2003-05-16  Jakub Steiner <jimmac@ximian.com>

	* 24x24/Makefile.am: add apps (thanks yaneti)

2003-05-13  Jakub Steiner <jimmac@ximian.com>

	* 16x16/apps/panel-notification-area.png:
	* 24x24/apps/panel-notification-area.png:
	* 32x32/apps/panel-notification-area.png:
	* 48x48/apps/panel-notification-area.png:
	* configure.in:
	* Makefile.am:
	* 16x16/Makefile.am:
	* 16x16/apps/Makefile.am:
	* 24x24/apps/Makefile.am:
	* 32x32/Makefile.am:
	* 32x32/apps/Makefile.am: notification area icon in panel

2003-05-06  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-05-05  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>
                                                                                
        * configure.in: Added cy to ALL_LINGUAS
        * po/cy.po: Added

2003-04-23  Jakub Steiner <jimmac@ximian.com>

	* 48x48/mimetypes/gnome-mime-application-x-gnucash.png:
	* 48x48/mimetypes/Makefile.am: Gnucash files

2003-04-23  Jakub Steiner <jimmac@ximian.com>

	* 48x48/mimetypes/gnome-mime-application-x-tar.png: for some
	  reason I left this one out
	* 48x48/mimetypes/Makefile.am: add

2003-04-23  Fatih Demir <kabalak@gtranslator.org>
