@@ -9,6 +9,11 @@ icon_DATA =\
 	gnome-server-config.png \
 	gnome-system-config.png \
 	gnome-starthere.png \
+	gnome-logout.png  \
+	gnome-shutdown.png \
+	gnome-reboot.png \
+	gnome-lockscreen.png \
+	gnome-accessories.png \
 	$(NULL)
 
 EXTRA_DIST = $(icon_DATA)
