@@ -1,3 +1,14 @@
+2003-06-05 Mark Finlay <sisob@eircom.net>
+
+	* 48x48/apps/gnome-logout.png:
+	* 48x48/apps/gnome-shutdown.png:
+	* 48x48/apps/gnome-reboot.png:
+	* 48x48/apps/gnome-lockscreen.png:
+	* 48x48/apps/gnome-accessories.png:
+	* 48x48/MakeFile.am:
+
+	Add new icon for use in the gnome menu and elsewhere.
+
 2003-06-05 Kenneth Rohde Christiansen <kenneth@gnu.org>
 
 	* configure.in: Added li to ALL_LINGUAS.
